styles.css
* {
	font-family: Verdana, Geneva, Tahoma, sans-serif;
}

body {
	background-color: #fefefe;
}

.container {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: flex-start;
}

.image-container {
	width: 100vw;
	min-height: 200vh;
	height: auto;
	background: url("./infographic.png");
	background-position: center;
	background-repeat: no-repeat;
	background-size: contain;
}

